--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,4 +1,28 @@
 .header {
-  color: $color-white;
+  color: #fff;
   background-color: $color-dark;
+}
+
+.header__top {
+  display: flex;
+  justify-content: space-between;
+  min-height: 115px;
+}
+
+.header__user-menu {
+  margin: 15px 0 20px;
+  justify-content: flex-end;
+}
+
+.header__logo {
+  margin-top: 18px;
+}
+
+.header__info {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 100%;
+  max-width: $main-content-width;
+  padding-left: 100px;
 }
