--- a/src/styles/scaffolding/scaffolding.scss
+++ b/src/styles/scaffolding/scaffolding.scss
@@ -15,5 +15,18 @@ body {
   font-weight: 400;
   font-family: "Lato", Arial, Helvetica, sans-serif;
   color: #3d3d3d;
-  background-color: #f3f3f3;
+  background-color: $color-grey-95;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+.visually-hidden:not(:focus):not(:active) {
+  @include setVisuallyHidden();
+}
+
+[hidden] {
+  display: none !important;
 }
