--- a/src/styles/scaffolding/variables.scss
+++ b/src/styles/scaffolding/variables.scss
@@ -1,5 +1,11 @@
 $color-dark: #222222;
 $color-red: #f10e34;
-$color-black: #000;
-$color-white: #fff;
-$color-grey: #eaeaea;
+$color-crimson : #f22f49;
+$color-grey-70: #b6b6b6;
+$color-grey-92: #eaeaea;
+$color-grey-95: #f3f3f3;
+$color-yellow: #ffc808;
+
+$aside-width: 25.39%;
+$aside-gap: 39px;
+$main-content-width: calc(100% - #{$aside-width} - #{$aside-gap)};
