--- a/src/styles/blocks/content.scss
+++ b/src/styles/blocks/content.scss
@@ -1,9 +1,7 @@
-.content__container {
-  display: flex;
+.content__showcase {
+  margin-bottom: 39px;
 }
 
-.content__aside {
-  flex-shrink: 0;
-  width: $aside-width;
-  margin-right: $aside-gap;
+.content__widget:not(:first-child) {
+  margin-top: 30px;
 }
