--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -15,14 +15,23 @@
 }
 
 .header__logo {
-  margin-top: 18px;
+  margin: 18px 0;
 }
 
 .header__info {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  align-content: flex-start;
   width: 100%;
   max-width: $main-content-width;
   padding-left: 100px;
+}
+
+.header__search {
+  flex-grow: 1;
+}
+
+.header__cart {
+  flex-shrink: 0;
 }
