--- a/src/styles/blocks/features.scss
+++ b/src/styles/blocks/features.scss
@@ -2,7 +2,7 @@
   display: flex;
   list-style: none;
   align-items: center;
-  height: 79px;
+  min-height: 79px;
   padding: 0;
   color: #fff;
   background-color: $color-red;
