--- a/src/styles/blocks/cart-link.scss
+++ b/src/styles/blocks/cart-link.scss
@@ -5,7 +5,7 @@
   margin-left: 40px;
   color: #fff;
   text-decoration: none;
-  transition: all 0.3s ease;
+  transition: color 0.3s ease;
 
   &:hover {
     color: $color-red;
