--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -24,3 +24,7 @@
 @import "./blocks/content.scss";
 @import "./blocks/showcase.scss";
 @import "./blocks/features.scss";
+@import "./blocks/cards.scss";
+@import "./blocks/card.scss";
+@import "./blocks/rating.scss";
+@import "./blocks/star.scss";
