--- a/src/styles/blocks/widget.scss
+++ b/src/styles/blocks/widget.scss
@@ -6,12 +6,14 @@
 }
 
 .widget__top {
+  display: flex;
+  justify-content: space-between;
   padding: 23px 0 20px;
   border-bottom: 1px solid $color-grey-92;
 }
 
 .widget__title {
-  margin: 0;
+  margin: 0 auto 0 0;
 }
 
 .widget__form {
@@ -26,8 +28,4 @@
 
 .widget__form-control {
   margin-bottom: 23px;
-}
-
-.widget__controls {
-  display: none;
 }
