--- a/src/styles/scaffolding/variables.scss
+++ b/src/styles/scaffolding/variables.scss
@@ -2,6 +2,7 @@ $color-dark: #222222;
 $color-red: #f10e34;
 $color-crimson: #f22f49;
 $color-grey-70: #b6b6b6;
+$color-grey-79: #cacaca;
 $color-grey-92: #eaeaea;
 $color-grey-95: #f3f3f3;
 $color-yellow: #ffc808;
