--- a/src/styles/blocks/card.scss
+++ b/src/styles/blocks/card.scss
@@ -61,6 +61,10 @@
   padding-top: 80.6%;
 }
 
+.card_size_medium .card__img-wrap {
+  padding-top: 115.34%;
+}
+
 .card_vertical .card__img-wrap {
   margin-bottom: 20px;
 }
