--- a/src/styles/blocks/widget.scss
+++ b/src/styles/blocks/widget.scss
@@ -16,6 +16,10 @@
   margin: 0 auto 0 0;
 }
 
+.widget__content {
+  overflow: hidden;
+}
+
 .widget__form {
   padding-top: 20px;
   padding-bottom: 30px;
