--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -29,3 +29,5 @@
 @import "./blocks/rating.scss";
 @import "./blocks/star.scss";
 @import "./blocks/slider.scss";
+@import "./blocks/arrows.scss";
+@import "./blocks/cards-slider.scss";
