--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -1,47 +1,5 @@
-.slider__arrows {
-  display: flex;
-  justify-content: space-between;
-}
-
-.slider__arrow {
-  display: none;
-  position: relative;
-  width: 22px;
-  height: 22px;
-  padding: 0;
-  border: 0;
-  border-radius: 50%;
-  background-color: $color-grey-79;
-  outline: none;
-  cursor: pointer;
-
-  &:not(:first-child) {
-    margin-left: 5px;
+.slider {
+  &:not(.slick-initialized) {
+    visibility: hidden;
   }
-
-  &.slick-arrow {
-    display: block;
-  }
-
-  &:hover,
-  &:focus {
-    background-color: $color-red;
-  }
-
-  &:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 22px;
-    height: 22px;
-    background-repeat: no-repeat;
-    background-position: center 6px;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='6' height='9'%3E%3Cpath fill-rule='evenodd' fill='%23FFF' d='M5.198.516a.516.516 0 00-.377-.159.514.514 0 00-.376.159l-3.75 3.75a.516.516 0 00-.159.377c0 .145.053.271.159.377l3.75 3.75a.514.514 0 00.376.159.516.516 0 00.377-.159.516.516 0 00.159-.377v-7.5a.516.516 0 00-.159-.377z'/%3E%3C/svg%3E");
-  }
-}
-
-.slider__arrow_next::before {
-  transform: rotate(180deg);
-  background-position: center 7px;
 }
