--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -18,6 +18,7 @@
 @import "./blocks/aside.scss";
 @import "./blocks/aside-menu.scss";
 @import "./blocks/widget.scss";
+@import "./blocks/filters.scss";
 @import "./blocks/title.scss";
 @import "./blocks/user-menu.scss";
 @import "./blocks/promo.scss";
@@ -30,4 +31,4 @@
 @import "./blocks/star.scss";
 @import "./blocks/slider.scss";
 @import "./blocks/arrows.scss";
-@import "./blocks/cards-slider.scss";
+@import "./blocks/medium-cards.scss";
