--- a/src/styles/blocks/aside.scss
+++ b/src/styles/blocks/aside.scss
@@ -1,3 +1,11 @@
+.aside {
+  max-width: 297px;
+
+  @media (max-width: $tablet-max) {
+    display: none;
+  }
+}
+
 .aside__menu {
   margin-top: 0;
   margin-bottom: 33px;
