--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -1,7 +1,11 @@
 .container {
-  max-width: 1200px;
+  max-width: 864px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
+
+  @media (min-width: $desktop) {
+    max-width: 1200px;
+  }
 }
