--- a/src/styles/blocks/title.scss
+++ b/src/styles/blocks/title.scss
@@ -1,7 +1,11 @@
 .title {
-  font-size: 22px;
+  font-size: 20px;
   line-height: 1.36;
   font-weight: 700;
   text-transform: uppercase;
   color: #000;
+
+  @media (min-width: $desktop-md) {
+    font-size: 22px;
+  }
 }
