--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -5,7 +5,7 @@
   padding-left: 15px;
   padding-right: 15px;
 
-  @media (min-width: $desktop) {
+  @media (min-width: $desktop-sm) {
     max-width: 1200px;
   }
 }
