--- a/src/styles/blocks/showcase.scss
+++ b/src/styles/blocks/showcase.scss
@@ -30,7 +30,7 @@
   font-size: 38px;
   line-height: 1.2;
   font-weight: 900;
-  color: $color-blue;
+  color: $color-dark-blue;
   text-transform: uppercase;
   text-shadow: 0px 3px 7px rgba(0, 0, 0, 0.13);
 }
