--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -32,3 +32,5 @@
 @import "./blocks/slider.scss";
 @import "./blocks/arrows.scss";
 @import "./blocks/medium-cards.scss";
+@import "./blocks/sales.scss";
+@import "./blocks/sales-item.scss";
