--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -13,8 +13,7 @@
   justify-content: space-between;
   flex-wrap: wrap;
   list-style: none;
-  width: 100%;
-  max-width: $main-content-width;
+  width: $main-content-width;
   margin: 0;
   padding: 0;
 }
