wide promo banner

--- a/src/styles/blocks/features.scss
+++ b/src/styles/blocks/features.scss
@@ -16,6 +16,7 @@
 .features__title {
   margin: 0;
   text-transform: uppercase;
+  font-size: 15px;
   font-weight: 700;
   letter-spacing: 0.2em;
 }
