--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -34,3 +34,4 @@
 @import "./blocks/medium-cards.scss";
 @import "./blocks/sales.scss";
 @import "./blocks/sales-item.scss";
+@import "./blocks/promo-wide.scss";
