--- a/src/styles/blocks/promo-wide.scss
+++ b/src/styles/blocks/promo-wide.scss
@@ -2,18 +2,65 @@
   @include setActiveWhiteBlock;
 
   display: flex;
-  justify-content: flex-end;
-  align-items: center;
+  flex-direction: column;
+  position: relative;
   min-height: 226px;
   padding: 24px;
   text-decoration: none;
+  z-index: 0;
+
+  @media (min-width: $tablet) {
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+  }
 }
 
 .promo-wide__text {
-  width: 50%;
-  padding-left: 80px;
+  text-align: center;
+
+  @media (min-width: $tablet) {
+    width: 50%;
+    padding-left: 80px;
+    text-align: left;
+  }
 }
 
 .promo-wide__more {
-  margin-top: 20px;
+  margin-top: 15px;
+}
+
+.promo-wide__background {
+  width: 100%;
+  max-width: 498px;
+  margin: 0 auto 15px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+
+  &::before {
+    content: "";
+    position: static;
+    display: block;
+    padding-top: 32.53%;
+  }
+
+  @media (min-width: $tablet) {
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    transform: translateY(-50%);
+    width: 60%;
+    margin: 0;
+    z-index: -1;
+  }
+}
+
+.promo-wide__subtitle {
+  transition: color 0.3s ease;
+}
+
+.promo-wide__link:hover .promo-wide__subtitle,
+.promo-wide__link:focus .promo-wide__subtitle {
+  color: $color-red;
 }
