--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -13,7 +13,7 @@
   text-decoration: none;
   color: #fff;
   background-color: $color-crimson;
-  transition: background-color 0.3s ease;
+  transition: background-color 0.3s ease, color 0.2s ease;
   outline: 0;
   cursor: pointer;
 
