--- a/src/styles/blocks/features.scss
+++ b/src/styles/blocks/features.scss
@@ -1,7 +1,7 @@
 .features {
   display: flex;
   list-style: none;
-  align-items: center;
+  align-items: flex-start;
   padding: 0;
   color: #fff;
   background-color: $color-red;
