--- a/src/styles/blocks/widget.scss
+++ b/src/styles/blocks/widget.scss
@@ -8,6 +8,7 @@
 .widget__top {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 23px 0 20px;
   border-bottom: 1px solid $color-grey-92;
 }
