--- a/src/styles/blocks/arrow-button.scss
+++ b/src/styles/blocks/arrow-button.scss
@@ -1,9 +1,4 @@
-.arrows {
-  display: flex;
-  justify-content: space-between;
-}
-
-.arrows__button {
+.arrow-button {
   display: none;
   position: relative;
   width: 22px;
@@ -15,10 +10,6 @@
   transition: background-color 0.2s ease;
   outline: none;
   cursor: pointer;
-
-  &:not(:first-child) {
-    margin-left: 5px;
-  }
 
   &:hover,
   &:focus {
@@ -39,6 +30,6 @@
   }
 }
 
-.arrows__button_next::before {
+.arrow-button_next::before {
   transform: scaleX(-1);
 }
