--- a/src/styles/blocks/promo-wide.scss
+++ b/src/styles/blocks/promo-wide.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   position: relative;
   min-height: 226px;
-  padding: 40px 25px;
+  padding: 53px 25px 54px;
   text-decoration: none;
   z-index: 0;
 
