--- a/src/styles/blocks/sales.scss
+++ b/src/styles/blocks/sales.scss
@@ -1,6 +1,7 @@
 .sales__container {
   display: flex;
   flex-direction: column;
+  margin-top: -30px;
 
   @media (min-width: $tablet) {
     flex-direction: row;
