--- a/src/styles/blocks/widget.scss
+++ b/src/styles/blocks/widget.scss
@@ -1,27 +1,28 @@
 .widget {
   @include setWhiteBlock;
 
-  padding-left: 25px;
-  padding-right: 25px;
+  padding-left: 26px;
+  padding-right: 26px;
 }
 
 .widget__top {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 23px 0 20px;
-  border-bottom: 1px solid $color-grey-92;
+  padding: 23px 0 22px;
+  box-shadow: inset 0 -1px $color-grey-92;
 }
 
 .widget__title {
   margin: 0 auto 0 0;
 }
 
-.widget__filters + .widget__arrows {
+.widget__filters + .widget__arrow-buttons {
   margin-left: 48px;
 }
 
 .widget__content {
+  position: relative;
   overflow: hidden;
 }
 
