--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -10,9 +10,9 @@
 
 @import "./blocks/header.scss";
 @import "./blocks/search-form.scss";
-@import "./blocks/logo.scss";
+@import "./blocks/site-logo.scss";
 @import "./blocks/cart-link.scss";
-@import "./blocks/nav.scss";
+@import "./blocks/site-nav.scss";
 @import "./blocks/container.scss";
 @import "./blocks/main.scss";
 @import "./blocks/aside.scss";
@@ -26,12 +26,14 @@
 @import "./blocks/showcase.scss";
 @import "./blocks/features.scss";
 @import "./blocks/cards.scss";
+@import "./blocks/big-cards.scss";
+@import "./blocks/medium-cards.scss";
 @import "./blocks/card.scss";
 @import "./blocks/rating.scss";
 @import "./blocks/star.scss";
 @import "./blocks/slider.scss";
-@import "./blocks/arrows.scss";
-@import "./blocks/medium-cards.scss";
+@import "./blocks/arrow-buttons.scss";
+@import "./blocks/arrow-button.scss";
 @import "./blocks/sales.scss";
 @import "./blocks/sales-item.scss";
 @import "./blocks/promo-wide.scss";
