--- a/src/styles/blocks/site-nav.scss
+++ b/src/styles/blocks/site-nav.scss
@@ -10,21 +10,31 @@
 
 .site-nav__list {
   display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+  flex-direction: column;
   list-style: none;
-  width: $main-content-width;
+  min-width: $main-content-width;
+  max-width: $main-content-width;
   margin: 0;
   padding: 0;
+
+  @media (min-width: $desktop-sm) {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+}
+
+.site-nav__item {
+  flex-grow: 1;
 }
 
 .site-nav__link {
   display: block;
-  padding: 17px 0 16px;
+  padding: 17px 10px 16px;
   color: #fff;
   text-transform: uppercase;
   text-decoration: none;
   transition: color 0.3s ease;
+  text-align: center;
 
   &:hover {
     color: $color-yellow;
