--- a/src/styles/blocks/filters.scss
+++ b/src/styles/blocks/filters.scss
@@ -1,10 +1,16 @@
 .filters {
   display: flex;
+  overflow: auto;
 }
 
 .filters__item {
   text-decoration: none;
   color: inherit;
+  margin-top: 20px;
+
+  @media (min-width: $tablet) {
+    margin-top: 0;
+  }
 
   &:hover,
   &:focus {
