--- a/src/styles/blocks/title.scss
+++ b/src/styles/blocks/title.scss
@@ -1,9 +1,13 @@
 .title {
-  font-size: 20px;
+  font-size: 18px;
   line-height: 1.36;
   font-weight: 700;
   text-transform: uppercase;
   color: #000;
+
+  @media (min-width: $phone-md) {
+    font-size: 20px;
+  }
 
   @media (min-width: $desktop-md) {
     font-size: 22px;
