--- a/src/styles/scaffolding/variables.scss
+++ b/src/styles/scaffolding/variables.scss
@@ -10,13 +10,19 @@ $color-yellow: #ffc808;
 $color-dark-blue: #303a7a;
 $color-blue: #108be9;
 
-$aside-width: 25.5%;
-$aside-gap: 38px;
-$main-content-width: calc(100% - #{$aside-width} - #{$aside-gap});
+$aside-width: calc((100% + 30px) * 0.265 - 20px);
+$aside-gap: 40px;
+$main-content-width: calc((100% + 30px) * 0.71 - 20px + 0.01px);
+// 100% + 30px = 1200px - container width,
+// 0.71 = 71% of 1200px,
+//-20px = aside-gap/2,
+// + 0.01px - calc fix
 
 $desktop-md: 1200px;
 $desktop-sm: 992px;
 $tablet-max: 991px;
 $tablet: 768px;
 $phone-max: 767px;
+$phone-horizontal: 640px;
 $phone-md: 480px;
+$phone-sm: 360px;
