--- a/src/styles/blocks/arrow-button.scss
+++ b/src/styles/blocks/arrow-button.scss
@@ -7,6 +7,10 @@
   border: 0;
   border-radius: 50%;
   background-color: $color-grey-79;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='6' height='9'%3E%3Cpath fill-rule='evenodd' fill='%23FFF' d='M5.198.516a.516.516 0 00-.377-.159.514.514 0 00-.376.159l-3.75 3.75a.516.516 0 00-.159.377c0 .145.053.271.159.377l3.75 3.75a.514.514 0 00.376.159.516.516 0 00.377-.159.516.516 0 00.159-.377v-7.5a.516.516 0 00-.159-.377z'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-size: 6px 9px;
+  background-position: 7px 6px;
   transition: background-color 0.2s ease;
   outline: none;
   cursor: pointer;
@@ -15,21 +19,8 @@
   &:focus {
     background-color: $color-red;
   }
-
-  &:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 22px;
-    height: 22px;
-    background-repeat: no-repeat;
-    background-position: 7px 6px;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='6' height='9'%3E%3Cpath fill-rule='evenodd' fill='%23FFF' d='M5.198.516a.516.516 0 00-.377-.159.514.514 0 00-.376.159l-3.75 3.75a.516.516 0 00-.159.377c0 .145.053.271.159.377l3.75 3.75a.514.514 0 00.376.159.516.516 0 00.377-.159.516.516 0 00.159-.377v-7.5a.516.516 0 00-.159-.377z'/%3E%3C/svg%3E");
-    background-size: 6px 9px;
-  }
 }
 
-.arrow-button_next::before {
+.arrow-button_next {
   transform: scaleX(-1);
 }
