--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -12,13 +12,13 @@
 @import "./blocks/filters.scss";
 @import "./blocks/title.scss";
 
-@import "./blocks/cards.scss";
 @import "./blocks/big-cards.scss";
 @import "./blocks/medium-cards.scss";
+@import "./blocks/small-cards-slider.scss";
 @import "./blocks/small-cards.scss";
 @import "./blocks/card.scss";
 @import "./blocks/rating.scss";
-@import "./blocks/star.scss";
+@import "./blocks/rating-item.scss";
 @import "./blocks/arrow-buttons.scss";
 @import "./blocks/arrow-button.scss";
 
