promo wide banner

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -24,7 +24,7 @@
   justify-content: space-between;
   align-content: flex-start;
   width: 100%;
-  max-width: $main-content-width;
+  max-width: $content-width;
   padding-left: 30px;
 
   @media (min-width: $desktop-sm) {
