--- a/src/styles/blocks/promo-wide.scss
+++ b/src/styles/blocks/promo-wide.scss
@@ -5,13 +5,14 @@
   flex-direction: column;
   position: relative;
   min-height: 226px;
-  padding: 53px 24px 54px;
+  padding: 36px 24px;
   text-decoration: none;
   z-index: 0;
 
   @media (min-width: $tablet) {
+    padding: 48px 0;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
   }
 }
@@ -20,8 +21,9 @@
   text-align: center;
 
   @media (min-width: $tablet) {
-    width: 50%;
-    padding-left: 80px;
+    max-width: calc(50% - 80px);
+    min-width: calc(50% - 80px);
+    padding-right: 24px;
     text-align: left;
   }
 }
@@ -32,7 +34,7 @@
 
 .promo-wide__background {
   width: 100%;
-  max-width: 498px;
+  max-width: 430px;
   margin: 0 auto 15px;
   background-repeat: no-repeat;
   background-position: center;
@@ -42,17 +44,13 @@
     content: "";
     position: static;
     display: block;
-    padding-top: 32.53%;
+    padding-top: 29.77%;
   }
 
   @media (min-width: $tablet) {
-    position: absolute;
-    top: 50%;
-    left: 10px;
-    transform: translateY(-50%);
-    width: 60%;
-    margin: 0;
-    z-index: -1;
+    max-width: 51.68%;
+    min-width: 51.68%;
+    margin: 0 0 0 48px;
   }
 }
 
