--- a/src/styles/scaffolding/variables.scss
+++ b/src/styles/scaffolding/variables.scss
@@ -12,7 +12,7 @@ $color-blue: #108be9;
 
 $aside-width: calc((100% + 30px) * 0.265 - 20px);
 $aside-gap: 40px;
-$main-content-width: calc((100% + 30px) * 0.71 - 20px + 0.01px);
+$content-width: calc((100% + 30px) * 0.71 - 20px + 0.01px);
 // 100% + 30px = 1200px - container width,
 // 0.71 = 71% of 1200px,
 //-20px = aside-gap/2,
