--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -36,6 +36,8 @@
 @import "./blocks/content.scss";
 @import "./blocks/showcase.scss";
 @import "./blocks/features.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/brands-slider.scss";
 
 @import "./blocks/promo.scss";
 @import "./blocks/sales.scss";
