--- a/src/styles/blocks/search-form.scss
+++ b/src/styles/blocks/search-form.scss
@@ -13,3 +13,9 @@
   border-bottom-right-radius: 0;
   background-color: #fff;
 }
+
+.search-form__icon {
+  width: 15px;
+  height: 15px;
+  background-position: center;
+}
