--- a/src/styles/blocks/site-nav.scss
+++ b/src/styles/blocks/site-nav.scss
@@ -7,6 +7,11 @@
   display: flex;
   justify-content: space-between;
   min-height: 51px;
+
+  @media (max-width: $phone-max) {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 
 .site-nav__list {
@@ -48,15 +53,56 @@
 }
 
 .site-nav__link {
-  display: block;
+  @include addTransition(color);
+
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
   padding: 17px 10px 16px;
+  border: 0;
+  font: inherit;
   color: #fff;
+  background-color: transparent;
   text-transform: uppercase;
   text-decoration: none;
-  transition: color 0.3s ease;
   text-align: center;
+
+  &_accent {
+    font-weight: 700;
+  }
 
   &:hover {
     color: $color-yellow;
+  }
+}
+
+.site-nav__icon {
+  display: block;
+  margin-right: 17px;
+  background-repeat: no-repeat;
+}
+
+.site-nav__icon_menu {
+  @include addTransition(background-image);
+
+  width: 16px;
+  height: 18px;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='13'%3E%3Cpath fill-rule='evenodd' fill='%23FFF' d='M1.945 8.988c-.447 0-.826.156-1.138.468a1.55 1.55 0 00-.469 1.139c0 .446.156.826.469 1.138.312.313.691.469 1.138.469.446 0 .826-.156 1.138-.469.313-.312.469-.692.469-1.138a1.55 1.55 0 00-.469-1.139 1.55 1.55 0 00-1.138-.468zm0-4.286c-.447 0-.826.156-1.138.469a1.547 1.547 0 00-.469 1.138c0 .447.156.826.469 1.138.312.313.691.469 1.138.469.446 0 .826-.156 1.138-.469.313-.312.469-.691.469-1.138 0-.446-.156-.826-.469-1.138a1.547 1.547 0 00-1.138-.469zm13.313 4.901a.258.258 0 00-.188-.08H4.891a.258.258 0 00-.188.08.257.257 0 00-.079.188v1.607c0 .073.026.136.079.189a.257.257 0 00.188.079H15.07a.257.257 0 00.188-.079.259.259 0 00.08-.189V9.791a.258.258 0 00-.08-.188zM1.945.416A1.55 1.55 0 00.807.885a1.549 1.549 0 00-.469 1.138c0 .447.156.826.469 1.139a1.55 1.55 0 001.138.469c.446 0 .826-.157 1.138-.469a1.55 1.55 0 00.469-1.139c0-.446-.156-.825-.469-1.138A1.551 1.551 0 001.945.416zm13.313 4.901a.257.257 0 00-.188-.079H4.891a.257.257 0 00-.188.079.258.258 0 00-.079.189v1.607c0 .072.026.135.079.188.053.053.116.08.188.08H15.07a.258.258 0 00.188-.08.258.258 0 00.08-.188V5.506a.259.259 0 00-.08-.189zm0-4.286a.261.261 0 00-.188-.079H4.891a.261.261 0 00-.188.079.26.26 0 00-.079.189v1.607c0 .073.026.135.079.188.053.053.116.08.188.08H15.07a.258.258 0 00.188-.08.256.256 0 00.08-.188V1.22a.26.26 0 00-.08-.189z'/%3E%3C/svg%3E");
+  background-size: 16px 13px;
+  background-position: 50% calc(50% - 2px);
+}
+
+.site-nav__link:hover .site-nav__icon_menu {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='13'%3E%3Cpath fill-rule='evenodd' fill='%23ffc808' d='M1.945 8.988c-.447 0-.826.156-1.138.468a1.55 1.55 0 00-.469 1.139c0 .446.156.826.469 1.138.312.313.691.469 1.138.469.446 0 .826-.156 1.138-.469.313-.312.469-.692.469-1.138a1.55 1.55 0 00-.469-1.139 1.55 1.55 0 00-1.138-.468zm0-4.286c-.447 0-.826.156-1.138.469a1.547 1.547 0 00-.469 1.138c0 .447.156.826.469 1.138.312.313.691.469 1.138.469.446 0 .826-.156 1.138-.469.313-.312.469-.691.469-1.138 0-.446-.156-.826-.469-1.138a1.547 1.547 0 00-1.138-.469zm13.313 4.901a.258.258 0 00-.188-.08H4.891a.258.258 0 00-.188.08.257.257 0 00-.079.188v1.607c0 .073.026.136.079.189a.257.257 0 00.188.079H15.07a.257.257 0 00.188-.079.259.259 0 00.08-.189V9.791a.258.258 0 00-.08-.188zM1.945.416A1.55 1.55 0 00.807.885a1.549 1.549 0 00-.469 1.138c0 .447.156.826.469 1.139a1.55 1.55 0 001.138.469c.446 0 .826-.157 1.138-.469a1.55 1.55 0 00.469-1.139c0-.446-.156-.825-.469-1.138A1.551 1.551 0 001.945.416zm13.313 4.901a.257.257 0 00-.188-.079H4.891a.257.257 0 00-.188.079.258.258 0 00-.079.189v1.607c0 .072.026.135.079.188.053.053.116.08.188.08H15.07a.258.258 0 00.188-.08.258.258 0 00.08-.188V5.506a.259.259 0 00-.08-.189zm0-4.286a.261.261 0 00-.188-.079H4.891a.261.261 0 00-.188.079.26.26 0 00-.079.189v1.607c0 .073.026.135.079.188.053.053.116.08.188.08H15.07a.258.258 0 00.188-.08.256.256 0 00.08-.188V1.22a.26.26 0 00-.08-.189z'/%3E%3C/svg%3E");
+}
+
+.site-nav__toggle {
+  width: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+
+  @media (min-width: $desktop-sm) {
+    display: none;
   }
 }
