--- a/src/styles/blocks/brands-slider.scss
+++ b/src/styles/blocks/brands-slider.scss
@@ -17,11 +17,10 @@
   flex-shrink: 0;
   padding-left: 20px;
   padding-right: 20px;
-  opacity: 0.75;
-  transition: opacity 0.2s ease;
+  transition: filter 0.2s ease;
 
   &:hover {
-    opacity: 0.9;
+    filter: brightness(1.1);
   }
 
   @media (min-width: $phone-md) {
