--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,3 +1,84 @@
 .footer {
+  font-size: 14px;
+  line-height: 1.3;
   background-color: $color-dark;
+}
+
+.footer__main {
+  padding-top: 40px;
+  padding-bottom: 45px;
+  color: $color-grey-70;
+
+  @media (min-width: $tablet) {
+    padding-top: 60px;
+    padding-bottom: 65px;
+  }
+}
+
+.footer__info {
+  padding: 30px 0;
+  color: #fff;
+  background-color: $color-almost-black;
+  text-align: center;
+}
+
+.footer__info-container {
+  @include resetChildMargins;
+}
+
+.footer__info-nav {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  list-style: none;
+  margin: 0 -13px;
+  padding: 0;
+}
+
+.footer__info-item {
+  margin: 13px 13px 0;
+}
+
+.footer__info-link {
+  @include addTransition(color);
+
+  color: #fff;
+  text-decoration: none;
+
+  &:hover,
+  &:focus {
+    color: $color-red;
+  }
+}
+
+.footer__copy {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 32px;
+  margin-bottom: 0;
+
+  @media (min-width: $tablet) {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+}
+
+.footer__copy-item {
+  &:not(:first-child) {
+    margin-top: 5px;
+  }
+
+  @media (min-width: $tablet) {
+    &:not(:first-child) {
+      margin-top: 0;
+
+      &::before {
+        content: "|";
+        margin-left: 8px;
+        margin-right: 8px;
+      }
+    }
+  }
 }
