--- a/src/styles/blocks/input-button.scss
+++ b/src/styles/blocks/input-button.scss
@@ -1,4 +1,6 @@
 .input-button {
+  @include addTransition(background-color);
+
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -20,6 +22,6 @@
 
   &:hover,
   &:focus {
-    background-color: darken($color-red, 10%);
+    background-color: darken($color-red, 5%);
   }
 }
