--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -7,6 +7,9 @@
 @import "./blocks/input-button.scss";
 @import "./blocks/input-error.scss";
 @import "./blocks/form-control.scss";
+@import "./blocks/icon.scss";
+
+@import "./blocks/container.scss";
 
 @import "./blocks/widget.scss";
 @import "./blocks/filters.scss";
@@ -28,7 +31,6 @@
 @import "./blocks/cart-link.scss";
 @import "./blocks/site-nav.scss";
 @import "./blocks/catalog-nav.scss";
-@import "./blocks/container.scss";
 @import "./blocks/main.scss";
 @import "./blocks/aside.scss";
 @import "./blocks/aside-menu.scss";
